<resources>
    <string name="app_name">Daleboot</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname_hint">FIRST NAME *</string>
    <string name="lastname_hint">LAST NAME *</string>
    <string name="street_hint">STREET *</string>
    <string name="occupation_hint">OCCUPATION *</string>
    <string name="telephone_hint">TEL *</string>
    <string name="city_hint">CITY *</string>
    <string name="state_hint">STATE</string>
    <string name="zipcode_hint">ZIPCODE</string>
    <string name="email_hint">EMAIL *</string>
    <string name="your_spinner_label">Select some thing new</string>
    <string name="add_info_q_one"><b>HAVE YOU EVER EXPERIENCED ANKLE BONE DISCOMFORT ?</b></string>
    <string name="add_info_q_two">HAVE YOU EVER EXPERIENCED SHIN BANG ?</string>
    <string name="add_info_q_three">HAVE YOU EVER EXPERIENCED A BURNING SENSATION ON THE BALLS OF YOUR FEET ?</string>
    <string name="add_info_q_four">ABILITY LEVEL *</string>
    <string name="previousbrnd_hint">PREVIOUS BRAND OF SKI BOOTS ?</string>
    <string name="add_info_q_five">ATTITUDE WHILE SKING ?</string>
    <string name="add_info_q_six">PREFFERED SKING CONDITIONS ?</string>
    <string name="weight_hint">WEIGHT</string>
    <string name="height_hint">HEIGHT</string>
    <string name="street_shoe_hint">STREET SHOE SIZE</string>
    <string name="arch_height_label">ARCH HEIGHT</string>
    <string name="left_arch_height_label">LEFT ARCH HEIGHT</string>
    <string name="right_arch_height_label">RIGHT ARCH HEIGHT</string>


    <string name="heel_stance_hint">HEEL STANCE</string>
    <string name="ankle_hint">ANKLE</string>
    <string name="left_ankle_hint">LEFT ANKLE</string>
    <string name="right_ankle_hint">RIGHT ANKLE</string>
    <string name="ankle_circum_hint">2 ANKLE (Circumference)</string>

    <string name="dor_suf_label">DORSIFLEXION</string>
    <string name="exostosis_hint">EXOSTOSIS</string>
    <string name="diff_lenght_legs_label">DIFFERENCE IN LEGS LENGTH</string>
    <string name="left_leg_hint">L:\u0020\u0020\u0020\u0020\u0020 <u><b>in</b></u></string>
    <string name="right_leg_hint">R:\u0020\u0020\u0020\u0020\u0020 <u><b>in</b></u></string>
    <string name="calf_label">1 CALF (Circumference)</string>
    <string name="foot_vol_label">3 FOOT VOLUME (Circumference)</string>
    <string name="width_label">5 WIDTH</string>
    <string name="measurement_tool_hint">TOOL TO BE USED FOR MEASUREMENT BELOW</string>
    <string name="size_label">4 SIZE</string>
    <string name="arch_length_label">6 ARCH LENGTH</string>
    <string name="model_selection_hint">SUGGESTED MODEL</string>
    <string name="linner_size_hint">LINER SIZE</string>
    <string name="linner_type_hint">SUGGESTED LINER TYPE</string>
    <string name="deposit_hint">DEPOSIT</string>
    <string name="pickup_date_hint">PICKUP DATE</string>
    <string name="amount_paid_hint">AMOUNT PAID</string>
    <string name="invoice_number_hint">INVOICE NUMBER</string>
    <string name="windlass_label">WINDLASS</string>
    <string name="fore_foot_label">FOREFOOT</string>
    <string name="rom_label">ROM</string>
    <string name="cant_wand_label">CANT WAND</string>
    <string name="daleboot_canted_label">DALEBOOT CANTED SOLE</string>
    <string name="degree_after_cant_label">DEGREE AFTER CANT</string>
    <string name="notes">NOTES</string>
    <string name="success_desc_text">We have successfully received your order.\nand will be shipping it to you soon!</string>
    <string name="okay"><h1><u>OKAY</u></h1></string>
    <string name="no_interconection_error">No Internet Connection</string>
    <string name="some_thing_goes_wrong">Something goes wrong!</string>
    <string name="groomers_label">GROOMERS</string>
    <string name="powder_label">POWDER</string>
    <string name="moguls_label">MOGULS</string>
    <string name="flat_label">FLAT</string>
    <string name="average_label">AVERAGE</string>
    <string name="steep_label">STEEP</string>
    <string name="tensed_label">TENSED</string>
    <string name="relaxed_label">RELAXED</string>
    <string name="aggresive_label">AGGRESSIVE</string>
    <string name="normal_label">NORMAL</string>
    <string name="pronation_label">PRONATION</string>
    <string name="supination_label">SUPINATION</string>
    <string name="left_heel_stance_hint">LEFT HEEL STANCE</string>
    <string name="right_heel_stance_hint">RIGHT HEEL STANCE</string>
    <string name="foot_bed_label">FOOT BED</string>
    <string name="instep_bump_label">INSTEP BUMP</string>
    <string name="pump_bump_label">PUMP BUMP</string>
    <string name="bunion_label">BUNION</string>
    <string name="morton_foot_label">MORTON\'S FOOT</string>
    <string name="halux_valgus_label">HALLUX VALGUS</string>
    <string name="tailor_bunion_label">TAILOR\'S BUNION</string>
    <string name="other_label">OTHER</string>
    <string name="next">Next</string>
    <string name="brand_label">BRAND</string>
    <string name="solelenght_label">SOLE LENGTH</string>
    <string name="model_label">MODEL</string>
    <string name="year_label">YEAR</string>
    <string name="skiboots_comments_label">COMMENTS ON PREVIOUS SKI BOOTS :</string>
    <string name="skiing_year_hint">HOW MANY YEARS HAVE YOU BEING SKIING ?</string>
    <string name="avg_skiing_year_hint">AVERAGE NUMBER OF SKI DAYS PER YEAR ?</string>


</resources>
