<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ls="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large_padding"
    tools:context="app.dalboot.mobiavialdo.com.daleboot.forms.AdditionalInfoForm">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:paddingRight="@dimen/normal_padding">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <com.farbod.labelledspinner.LabelledSpinner
               android:id="@+id/add_info_q_one_spinner"
               ls:labelText="@string/add_info_q_one"
               ls:widgetColor="@color/black"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"



              />
           <com.farbod.labelledspinner.LabelledSpinner
               android:id="@+id/add_info_q_two_spinner"
               ls:labelText="@string/add_info_q_two"
               ls:widgetColor="@color/black"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"


               />
           <com.farbod.labelledspinner.LabelledSpinner
               android:id="@+id/add_info_q_threespinner"
               ls:labelText="@string/add_info_q_three"
               ls:widgetColor="@color/black"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               ls:entries="@color/dark_grey"


               />
           <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/small_margin"
               >

           <EditText
               android:id="@+id/skiboots"
               style="@style/CustomEditTextStyle"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/previousbrnd_hint"
               android:inputType="textNoSuggestions"


               />
       </android.support.design.widget.TextInputLayout>
           <com.farbod.labelledspinner.LabelledSpinner
               android:id="@+id/add_info_q_four_spinner"
               ls:labelText="@string/add_info_q_four"
               ls:widgetColor="@color/black"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               ls:entries="@color/dark_grey"


               />
           <com.farbod.labelledspinner.LabelledSpinner
               android:id="@+id/add_info_q_five_spinner"
               ls:labelText="@string/add_info_q_five"
               ls:widgetColor="@color/black"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               ls:entries="@color/dark_grey"


               />
           <com.farbod.labelledspinner.LabelledSpinner
               android:id="@+id/add_info_q_six_spinner"
               ls:labelText="@string/add_info_q_six"
               ls:widgetColor="@color/black"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               ls:entries="@color/dark_grey"


               />

           <android.support.design.widget.TextInputLayout
               android:layout_width="200dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/small_margin"
               >

           <EditText
               android:id="@+id/height"
               style="@style/CustomEditTextStyle"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/height_hint"
               android:inputType="number"


               />
           </android.support.design.widget.TextInputLayout>


           <android.support.design.widget.TextInputLayout
               android:layout_width="200dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/small_margin"
               >

               <EditText
                   android:id="@+id/weight"
                   style="@style/CustomEditTextStyle"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/weight_hint"
                   android:inputType="number"


                   />
           </android.support.design.widget.TextInputLayout>
           <android.support.design.widget.TextInputLayout
               android:layout_width="200dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/small_margin"
               >

               <EditText
                   android:id="@+id/street_shoe_size"
                   style="@style/CustomEditTextStyle"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/street_shoe_hint"
                   android:inputType="number"

                   />
           </android.support.design.widget.TextInputLayout>

       </LinearLayout>




   </ScrollView>

</RelativeLayout>
</layout>
