<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/large_padding"
        tools:context="app.dalboot.mobiavialdo.com.daleboot.forms.CustomerInfoForm">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/firstname"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/firstname_hint"
                        android:inputType="textCapWords|textNoSuggestions"

                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/above_normal_margin"


                    >

                    <EditText
                        android:id="@+id/lastname"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/lastname_hint"
                        android:inputType="textCapWords|textNoSuggestions"


                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/above_normal_margin"


                    >

                    <EditText
                        android:id="@+id/street"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street_hint"
                        android:inputType="textCapWords|textNoSuggestions"

                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/above_normal_margin"


                    >

                    <EditText
                        android:id="@+id/occupation"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/occupation_hint"
                        android:inputType="textCapWords|textNoSuggestions"

                        />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/above_normal_margin"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/telephone_hint"


                        >

                        <EditText
                            android:id="@+id/telephone"
                            style="@style/CustomEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"

                            />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"


                        >

                        <EditText
                            android:id="@+id/city"
                            style="@style/CustomEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city_hint"
                            android:inputType="textCapWords|textNoSuggestions"


                            />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/above_normal_margin"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/state"
                            style="@style/CustomEditTextStyle"
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:hint="@string/state_hint"
                            android:inputType="textCapWords|textNoSuggestions"


                            />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/zipcode"
                            style="@style/CustomEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/zipcode_hint"
                            android:inputType="textCapWords|textNoSuggestions"

                            />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/above_normal_margin"



                    >

                    <EditText
                        android:id="@+id/email"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"


                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>