<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_canting_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.dalboot.mobiavialdo.com.daleboot.activities.CantingInfoActivity">

    <include layout="@layout/custom_toolbar"
        android:id="@+id/toolbar"></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/large_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cant_wand_label"
            android:textColor="@color/black"
            android:textSize="@dimen/v_small_text_size"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/cant_wand_layout">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/normal_margin"



                >

                <EditText
                    android:id="@+id/left_cant_wand"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/left_leg_hint"
                    android:inputType="number"


                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/normal_margin"


                >

                <EditText
                    android:id="@+id/right_cant_wand"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/right_leg_hint"
                    android:inputType="number"


                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daleboot_canted_label"
            android:textColor="@color/black"
            android:textSize="@dimen/v_small_text_size"
            android:layout_marginTop="@dimen/small_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/calf_layout">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/normal_margin"



                >

                <EditText
                    android:id="@+id/left_boot_canted_sole"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/left_leg_hint"
                    android:inputType="number"


                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/normal_margin"


                >

                <EditText
                    android:id="@+id/right_boot_canted_sole"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/right_leg_hint"
                    android:inputType="number"


                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_after_cant_label"
            android:textColor="@color/black"
            android:textSize="@dimen/v_small_text_size"
            android:layout_marginTop="@dimen/small_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/degree_after_cant_layout">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/normal_margin"



                >

                <EditText
                    android:id="@+id/left_degree_after_cant"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/left_leg_hint"
                    android:inputType="number"


                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/normal_margin"


                >

                <EditText
                    android:id="@+id/right_degree_after_cant"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/right_leg_hint"
                    android:inputType="number"


                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/small_margin"



            >

            <EditText
                android:id="@+id/notes"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes"
                android:inputType="textCapCharacters|textMultiLine"



                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>
</layout>
